se añade variable de entorno

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/producto/:id",
-      "destination": "https://kr49kcnp-3000.use.devtunnels.ms/api/producto/:id"
+      "source": "/producto/:id",
+      "destination": "https://kr49kcnp-3000.use.devtunnels.ms/producto/:id"
     },
     {
       "source": "/(.*)",
